--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
                 // => @media (min-width: 768px) { ... }
 
                 'lg': '976px',
-                // => @media (min-width: 1024px) { ... }
-
-                'xl': '1024px',
-                // => @media (min-width: 1280px) { ... }
+                // => @media (min-width: 1024px) { ... },
 
               },
             extend: {
@@ -172,7 +169,7 @@
       </div>
         <div class=" lg:ml-[150px] lg:mt-[280px]">
           <img class="w-full lg:hidden" src="https://edge.rode.com/images/page/1/modules/1508/PodMic_PL_P_01_web-top-padding-01.svg">
-          <img alt="" class=" lg:w-[630px] hidden" data-src="https://edge.rode.com/images/page/1/modules/1508/PodMic_PL_PI_01.svg" src="https://edge.rode.com/images/page/1/modules/1508/PodMic_PL_PI_01.svg">
+          <img alt="" class=" lg:w-[630px] hidden lg:block" data-src="https://edge.rode.com/images/page/1/modules/1508/PodMic_PL_PI_01.svg" src="https://edge.rode.com/images/page/1/modules/1508/PodMic_PL_PI_01.svg">
           <p class="lg:text-white text-[20px] mt-[15px] mx-[10px] lg:text-[30px] text-center lg:ml-[0px] lg:mt-[39px] lg:w-[640px] font-bold lg:leading-[35px]">Broadcast-grade Dynamic Microphone</p>
           <p class="lg:text-[21px]  leading-[25px] text-[#867f7d] lg:text-[#d0add5] font-medium lg:w-[620px] lg:text-center mt-[15px]  ml-[10px]">Give your voice that rich, broadcast sound with the PodMic. Perfect for livestreaming, voice-over, podcasting and gameplay.</p>
           <div class="flex lg:mt-[50px] lg:ml-[00px] items-center justify-center my-4">
@@ -193,7 +190,7 @@
         </div>
         <div class=" lg:ml-[870px] lg:mt-[250px]">
           <img class="lg:hidden " src="https://edge.rode.com/images/page/1/modules/314/WIGO_II_PL_P_01_web-top-padding-01.svg">
-          <img alt="" class="lg:w-[650px] hidden" data-src="https://edge.rode.com/images/page/1/modules/314/WIGO_II_PL_PI_01.svg" src="https://edge.rode.com/images/page/1/modules/314/WIGO_II_PL_PI_01.svg">
+          <img alt="" class="lg:w-[650px] hidden lg:block" data-src="https://edge.rode.com/images/page/1/modules/314/WIGO_II_PL_PI_01.svg" src="https://edge.rode.com/images/page/1/modules/314/WIGO_II_PL_PI_01.svg">
           <p class="text-black lg:text-white text-[25px] mx-[20px] text-center font-medium lg:text-[32px] lg:ml-[30px] mt-[20px]">Next Generation Wireless Audio</p>
           <p class="lg:text-[21px] mx-[10px] font-medium leading-[25px] text-[#867f7d] lg:w-[640px] lg:text-center mt-[15px] leading-[30px]">The Wireless GO II is the world’s most powerful and versatile wireless microphone. With an unparalleled feature set and ultra-compact form factor, this is next generation wireless audio for every creator.</p>
           <div class="flex lg:mt-[50px] lg:ml-[00px] items-center justify-center my-4">
@@ -214,7 +211,7 @@
         </div>
         <div class=" lg:ml-[150px] lg:mt-[250px]">
           <img class="w-full lg:hidden pt-[10px]" src="https://edge.rode.com/images/page/1/modules/5303/NT-USB_Mini_PL_P_01_web-top-padding-01.svg">
-          <img alt="" class="title-image lg:w-[650px] hidden" data-src="https://edge.rode.com/images/page/1/modules/5303/NT-USB_Mini_PL_PI_01.svg" src="https://edge.rode.com/images/page/1/modules/5303/NT-USB_Mini_PL_PI_01.svg">
+          <img alt="" class="title-image lg:w-[650px] hidden lg:block" data-src="https://edge.rode.com/images/page/1/modules/5303/NT-USB_Mini_PL_PI_01.svg" src="https://edge.rode.com/images/page/1/modules/5303/NT-USB_Mini_PL_PI_01.svg">
           <p class="text-black lg:text-white text-[25px] lg:text-[30px] text-center ml-[0px] mt-[20px] lg:mt-[39px] lg:w-[640px] font-bold lg:font-medium leading-[35px]">Compact Sound, Incredibly Powerful</p>
           <p class="lg:text-[21px] text-[#867f7d] leading-[25px] lg:text-[#90bbd4] font-medium lg:w-[640px] lg:text-center mt-[15px] leading-[30px] ml-[10px]">The NT-USB Mini brings pristine studio sound to a compact USB microphone, and with RØDE Connect unlocking more power, more features and more control, it’s the perfect recording solution for podcasters, gamers and streamers.</p>
           <div class="flex lg:mt-[50px] lg:ml-[00px] items-center justify-center my-4">
